--- a/main.css
+++ b/main.css
@@ -2,36 +2,68 @@
 
 body,
 html {
-  background-color: #ff99c4;
   font-family: 'Roboto', sans-serif;
-  text-shadow: 3px 5px 0px rgba(0,0,0,0.1);
-  font-weight: 900;
-  font-size: 50px;
-  color: white;
-  padding: 0;
-  margin: 0;
+  background-color: #ff99c4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
 }
 
-.container {
-  margin: 0 auto;
-}
-
-#quote-mark {
-  font-family: Helvetica;
-  line-height: 1.5rem;
-  color: rgba(255,255,255,0.4);
-}
-
-#new-quote-btn {
+h1 {
   font-family: 'Raleway', sans-serif;
-  background-color: white;
+  font-size: 25px;
   color: #ff99c4;
-  border: 0px;
+  text-align: center;
+  margin: 0;
+  width: 100%;
+  padding:2px 0px 2px 0px;
+}
+
+button {
+  margin: 0px 10px 10px 0px;
+  padding: 10px 20px;
   border-radius: 5px;
+  border: 0px;
+  font-weight: 100;
+  font-size: 15px;
 }
 
 button:focus {
   outline: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ff99c4;
+}
+
+a:visited {
+  color: #ff99c4;
+}
+
+strong {
+  font-weight: 900;
+}
+
+#quote {
+  text-shadow: 3px 5px 0px rgba(0,0,0,0.1);
+  font-weight: 900;
+  font-size: 50px;
+  color: white;
+}
+
+#new-quote-btn {
+  background-color: #e589b0;
+  color: rgba(255,255,255,0.6);
+}
+
+#new-quote-btn:hover {
+  background-color: #d06995;
 }
 
 .footer{
@@ -46,22 +78,11 @@ button:focus {
 }
 
 .footer:hover{
-  bottom:0;
-}
-
-h1 {
-  font-family: 'Raleway', sans-serif;
-  font-size: 25px;
-  color: #ff99c4;
-  text-align: center;
-  margin: 0;
-  width: 100%;
-  padding:2px 0px 2px 0px;
+  bottom: 0;
 }
 
 .footer-content {
   padding-top: 5px;
-  font-family: 'Raleway', sans-serif;
   font-size: 13px;
   text-align: center;
   width: 100%;
